--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,6 +15,9 @@ android {
         versionName "1.0"
         multiDexEnabled true
         flavorDimensions "version"
+        ext {
+            app_channels = ['vivo', 'oppo']
+        }
     }
 
     signingConfigs {
